--- a/themes/hai/layouts/partials/footer.html
+++ b/themes/hai/layouts/partials/footer.html
@@ -1,3 +1,6 @@
-<div class="fluid-container bg-dark mt-5">
-<h6 class="pt-3 pb-3 text-center text-white">&copy; 2019 Copyright asfahstudio</h6>
+<div style="height: 100px;" class="bg-dark mt-5">
+    <p class="h5 text-white text-center" style="padding-top: 40px;">
+        <span class="font-weight-bold">&copy; 2019</span>
+        <span class="font-weight-light"> | asfahstudio</span>
+    </p>
 </div>
