--- a/themes/hai/layouts/partials/jumbotron.html
+++ b/themes/hai/layouts/partials/jumbotron.html
@@ -1,6 +1,6 @@
-<div class="jumbotron jumbotron">
-        <div class="container">
-          <h1 class="display-4">Linux serrr</h1>
-          <p class="lead">Welcome to Linux serrr, learn development web & mobile from zero to hero with Linux Ubuntu 16 LTS</p>
-        </div>
-      </div>
+<div class="jumbotron jumbotron text-white rounded-0" style="background-color: #192a56;">
+  <div class="container">
+    <h1 class="display-4">Linux serrr</h1>
+    <p class="lead">Learn web & mobile development from zero to hero with Linux Ubuntu 16.04 LTS</p>
+  </div>
+</div>
