--- a/themes/hai/layouts/partials/nav.html
+++ b/themes/hai/layouts/partials/nav.html
@@ -1,4 +1,4 @@
-<div class="fluid-container bg-light">
+<div class="fluid-container bg-light sticky-top shadow">
 <nav class="navbar navbar-expand-lg navbar-light bg-light container">
 
     <a class="navbar-brand" href="{{.Params.baseURL}}/"><img src="/fav.png" alt="" class="mr-2"> asfahstudio</a>
