--- a/themes/hai/layouts/_default/baseof.html
+++ b/themes/hai/layouts/_default/baseof.html
@@ -8,7 +8,9 @@
             {{- block "main" . }}{{- end }}
         </div>
         
-        {{- partial "js.html" . -}}
+        {{- partial "follow.html" . -}}
+        {{- partial "about.html" . -}}
         {{- partial "footer.html" . -}}
+        {{- partial "js.html" . -}}
     </body>
 </html>
