--- a/themes/hai/layouts/partials/footer.html
+++ b/themes/hai/layouts/partials/footer.html
@@ -1,6 +1,14 @@
-<div style="height: 100px;" class="bg-dark mt-5">
-    <p class="h5 text-white text-center" style="padding-top: 40px;">
-        <span class="font-weight-bold">&copy; 2019</span>
-        <span class="font-weight-light"> | asfahstudio</span>
+<div class="container-fluid mt-5">
+<div class="row text-white" style="height: 150px;background-color: #0097e6;">
+<div class="col-lg-6 align-self-center">
+    <p>menggunakan:</p>
+    <p class="">| ubuntu | hugo | bootstrap | font awesome | github |</p>
+</div>
+<div class="col-lg-6 align-self-center">
+    <p class="text-right">
+    <span class="font-weight-bold">&copy; 2019</span>
+    <span class="font-weight-light"> | asfahstudio</span>
     </p>
+</div>
+</div>
 </div>
