--- a/themes/hai/layouts/partials/nav.html
+++ b/themes/hai/layouts/partials/nav.html
@@ -1,4 +1,4 @@
-<div class="fluid-container bg-light sticky-top shadow">
+<div class="container-fluid bg-light sticky-top shadow">
 <nav class="navbar navbar-expand-lg navbar-light bg-light container">
 
     <a class="navbar-brand" href="{{.Params.baseURL}}/"><img src="/fav.png" alt="" class="mr-2"> asfahstudio</a>
@@ -10,9 +10,8 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
         <a class="nav-item nav-link" href="{{.Params.baseURL}}/linux/">Linux</a>
-        <a class="nav-item nav-link" href="#">IP Address</a>
         <a class="nav-item nav-link" href="{{.Params.baseURL}}/git/">Git</a>
-        <a class="nav-item nav-link" href="#">Hugo</a>
+        <a class="nav-item nav-link" href="{{.Params.baseURL}}/ssg/">SSG</a>
         </div>
     </div>
 
