--- a/themes/hai/layouts/_default/list.html
+++ b/themes/hai/layouts/_default/list.html
@@ -7,11 +7,13 @@
 {{.Content}}
 <div class="row justify-content-center">
     {{ range (.Paginator 4).Pages }}
-        <div class="card mr-4 mb-4 shadow-sm rounded" style="width: 16rem;">
-            <img src="{{ with .Params.image }}{{ . }}{{ end }}" class="card-img-top" alt="">
-            <div class="card-body">
-                <p class="card-text"><a href="{{.Permalink}}">{{.Title}}</a></p>
-                <p class="card-text"><small class="text-muted">{{.Date.Format "2006-01-02"}}</small></p>
+        <div class="col-lg-3 col-md-6">
+            <div class="card mb-4 shadow-sm rounded" style="">
+                <img src="{{ with .Params.image }}{{ . }}{{ end }}" class="card-img-top" alt="" style="">
+                <div class="card-body">
+                    <p class="card-text"><a href="{{.Permalink}}">{{.Title}}</a></p>
+                    <p class="card-text"><small class="text-muted">{{.Date.Format "2006-01-02"}}</small></p>
+                </div>
             </div>
         </div>
     {{ end }}
