--- a/themes/hai/layouts/_default/single.html
+++ b/themes/hai/layouts/_default/single.html
@@ -31,7 +31,7 @@
               {{ end }}
               </div>
           
-              <p class="" style="margin-bottom: -20px;margin-top: 200px;">Baca juga :</p>
+              <p class="" style="margin-top: 200px;">Baca juga :</p>
               <p>
                   {{ with .PrevInSection }}
                     <a class="previous" href="{{.Permalink}}"> {{.Title}}</a>
