--- a/themes/hai/layouts/partials/about.html
+++ b/themes/hai/layouts/partials/about.html
@@ -11,10 +11,9 @@
                 asfahstudio adalah blog yang membahas tentang dunia pemrograman web dan mobile menggunakan sistem operasi Linux. Disini akan membahas pemrograman mulai dari enol ya dari dasar banget pokoknya yang gak tau apa-apa tentang dunia pemrograman saya merekomendasikan mengunjungi dan terus mempelajari artikel yang ada di blog ini. 
             </p>
             <p>
-                Blog ini membahas tentang dunia pemrograman menurut sepengetahuan penulis, jangan terlalu percaya dengan isi artikel yang telah di upload, bisa jadi memberi pencarahan atau malah menyesatkan anda, jadi jangan terlalu berharap di blog ini karena kepada Allah lah tempat kita untuk berharap serta Allah lah yang Maha Pemberi Petunjuk.
+                Blog ini membahas tentang dunia pemrograman menurut sepengetahuan penulis dan berbagai sumber, semoga apa yang di bagikan bisa bermanfaat untuk anda semua. Dan jangan lupa hanya kepada Allah lah kita meminta petunjuk karena Allah lah sang Maha Pemberi Petunjuk.
             </p>
-            <button type="button" class="btn btn-primary">Faedah</button> atau 
-            <button type="button" class="btn btn-outline-primary">Unfaedah</button>
+            <button type="button" class="btn btn-primary">Semoga Berkah</button>
         </div>
     </div>
 </div>
