--- a/themes/hai/layouts/partials/footer.html
+++ b/themes/hai/layouts/partials/footer.html
@@ -1,8 +1,7 @@
 <div class="container-fluid mt-5">
 <div class="row text-white" style="height: 150px;background-color: #0097e6;">
 <div class="col-lg-6 align-self-center">
-    <p>menggunakan:</p>
-    <p class="">| ubuntu | hugo | bootstrap | font awesome | github |</p>
+    <p class="">Made with: | ubuntu | hugo | bootstrap | font awesome | github |</p>
 </div>
 <div class="col-lg-6 align-self-center">
     <p class="text-right">
